# recipinator

./: .gitignore  Makefile  README.md  pyproject.toml
recipinator/: __init__.py  config.py
recipinator/database/: __init__.py  db.py  load_nutrient_information.py  load_scraping_into_db.py  recipinator.db
recipinator/domain/: __init__.py  classes.py  functionalities.py
recipinator/interface_telegram/: __init__.py  commands.py  config.py  nutrients.py  recipinator.py  utils.py
recipinator/scrapers/: data.json
recipinator/scrapers/scrapers/: items.py
recipinator/scrapers/scrapers/spiders/: recipes.py
